@@ -113,13 +113,17 @@ bool
 CGAlgorithms::isOnLine(const Coordinate& p, const CoordinateSequence* pt)
 {
 	RobustLineIntersector lineIntersector;
-	for(int i=1;i<pt->getSize();i++) {
-		const Coordinate &p0=pt->getAt(i-1);
+	int ptsize = pt->getSize();
+	if ( ptsize == 0 ) return false;
+
+	const Coordinate *pp=&(pt->getAt(0));
+	for(int i=1; i<ptsize; i++) {
 		const Coordinate &p1=pt->getAt(i);	
-		lineIntersector.computeIntersection(p, p0, p1);
+		lineIntersector.computeIntersection(p, *pp, p1);
 		if (lineIntersector.hasIntersection()) {
 			return true;
 		}
+		pp=&p1;
 	}
 	return false;
 }
@@ -379,6 +383,9 @@ double CGAlgorithms::length(const CoordinateSequence* pts) {
 
 /**********************************************************************
  * $Log$
+ * Revision 1.23  2005/06/23 11:23:36  strk
+ * performance improvement for CGAlgorithms::isOnLine()
+ *
  * Revision 1.22  2005/04/06 11:09:41  strk
  * Applied patch from Jon Schlueter (math.h => cmath; ieeefp.h in "C" block)
  *
